[tool.poetry]
name = "scm-staging"
version = "0.0.1"
description = "Library & tools for staging pull requests from gitea in the Open Build Service"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPLv2.0-or-later"
readme = "README.rst"
packages = [
    { include = "scm_staging" },
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"
py_obs = { git = "https://github.com/dcermak/py-obs.git", branch = "main" }
py_gitea_opensuse_org = { git = "https://github.com/dcermak/py-gitea-opensuse-org.git", branch = "main" }
pika = "^1.3.2"
tornado = "^6.3"
pydantic = "^1.10"

[tool.poetry.scripts]
submit_to_pool = "scm_staging.submit_to_pool:main"
rabbit_listener = "scm_staging.rabbit_listener:main"
app = "scm_staging.webhook:main"
ci_status = "scm_staging.ci_status:main"

[tool.poetry.group.dev.dependencies]
black = ">=22.10"
mypy = ">=0.991"
pytest = ">=7.2"
httpx = ">=0.23"
pytest-asyncio = ">=0.20"
types-pika = "^1.2.0b1"
gitpython = "^3.1.31"
sphinx = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
